hosting_task: when viewing the task log, do not truncate entries (was buggy/annoying)

--- a/hosting.css
+++ b/hosting.css
@@ -57,10 +57,6 @@ td.hosting-actions .hosting-button-disabled {
   float: right;
 }
 
-.hosting-task-full {
-  display: none;
-}
-
 /**
  * Hosting queue list.
  */
